# matrix-google-calendar

./: .gitignore  Cargo.toml  TODOs.md  config-example.yml
src/: errors.rs  main.rs
src/commands/: calendars.rs  events.rs  mod.rs
src/google_calendar/: mod.rs  types.rs
src/matrix/: mod.rs  sync.rs
