cargo-features = ["edition2021"]
[package]
name = "matrix-google-calendar"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.matrix-sdk]
version = "0.3"

[dependencies]
once_cell = "1.3.1"
url = "2.2.2"

# Matrix
#mrsbfh = {git = "https://github.com/MTRNord/mrsbfh"}
mrsbfh = {path = "../mrsbfh/mrsbfh"}
serde = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.4"
tokio = { version = "1", features = ["full"] }
clap = "=3.0.0-beta.4"
clap_derive = "=3.0.0-beta.4"
async-trait = "0.1.41"
thiserror = "1.0"
regex = "1.4.3"

# Google calendar
oauth2 = "4.1.0"
chrono = "0.4.19"
axum = "0.2.3"
reqwest = {version="0.11.4", features=["json"]}
serde_json = "1.0.67"